RESOLVED FIXED224338
REGRESSION(r273541) WKWebView can't load NSURLRequest subclasses
https://bugs.webkit.org/show_bug.cgi?id=224338
Summary REGRESSION(r273541) WKWebView can't load NSURLRequest subclasses
Alex Christensen
Reported 2021-04-08 13:10:04 PDT
REGRESSION(r273541) WKWebView can't load NSURLRequest subclasses
Attachments
Patch (10.29 KB, patch)
2021-04-08 13:23 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2021-04-08 13:23:13 PDT
Brent Fulgham
Comment 2 2021-04-08 14:26:10 PDT
Comment on attachment 425538 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=425538&action=review A really nice fix. Thank you for solving this puzzle! > Source/WebKit/Shared/Cocoa/WebCoreArgumentCodersCocoa.mm:551 > + if (Class requestClass = [requestToSerialize class]; UNLIKELY(requestClass != [NSURLRequest class] && requestClass != [NSMutableURLRequest class])) { Could we add logging indicating what the unexpected class is? It would be interesting to know how widespread this weird use case is.
Brent Fulgham
Comment 3 2021-04-08 15:59:49 PDT
EWS
Comment 4 2021-04-08 16:14:35 PDT
Committed r275687 (236321@main): <https://commits.webkit.org/236321@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 425538 [details].
Note You need to log in before you can comment on or make changes to this bug.